[gd_scene load_steps=2 format=3 uid="uid://tgx8h3q75k41"]

[ext_resource type="Script" uid="uid://dfpu5vt1gt66u" path="res://scenes/test scene/multiplayer_test.gd" id="1_6edci"]

[node name="MultiplayerTest" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_6edci")

[node name="host" type="Button" parent="."]
offset_left = 51.0
offset_top = 47.0
offset_right = 211.0
offset_bottom = 78.0
text = "Host"

[node name="join" type="Button" parent="."]
offset_left = 245.0
offset_top = 44.0
offset_right = 402.0
offset_bottom = 77.0
text = "join
"

[node name="Start game" type="Button" parent="."]
offset_left = 436.0
offset_top = 43.0
offset_right = 636.0
offset_bottom = 82.0
text = "Start game"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 57.0
offset_top = 108.0
offset_right = 125.563
offset_bottom = 139.0
scale = Vector2(4.44815, 1.01485)

[connection signal="pressed" from="host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Start game" to="." method="_on_start_game_pressed"]
